--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,25 @@
 version: "3.8"
 services:
-  node:
+  api:
     build:
       context: study
-    container_name: "app"
+    container_name: "api"
     links:
       - mongo
     restart: always
-    container_name: "api"
     ports:
       - "3000:3000"
+    expose:
+      - "3000"
     depends_on:
       - mongo
+      - kafka
     links:
       - kafka
+      - mongo
+    networks:
+      - default
+      - kafka-docker_backend
   mongo:
     image: mongo
     restart: always
@@ -22,6 +28,11 @@ services:
     container_name: "mongo"
     ports:
       - "27017:27017"
+    expose:
+      - "27017"
+    networks:
+      - default
+      - kafka-docker_backend
   angular:
     build:
       context: angular
@@ -31,5 +42,23 @@ services:
     restart: always
     ports:
       - "4500:4500"
+    expose:
+      - "4500"
     depends_on:
       - api
+  consumer:
+    build:
+      context: kafka-consumer
+    deploy:
+      replicas: 2
+    restart: always
+    depends_on:
+      - kafka
+    links:
+      - kafka
+    networks:
+      - default
+      - kafka-docker_backend
+networks:
+  kafka-docker_backend:
+    external: true
