--- a/study/package.json
+++ b/study/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "kafkajs": "^1.15.0",
     "mongoose": "^5.13.5",
+    "morgan": "^1.10.0",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3"
   }
