--- a/angular/angular.json
+++ b/angular/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "3b041c6b-baa6-4084-be8c-25d49a840df0"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
