--- a/kafka-consumer/package.json
+++ b/kafka-consumer/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express-async-handler": "^1.1.4",
     "kafkajs": "^1.15.0",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3"
